--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -21,25 +21,26 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
-    :root {
-      --base: #ffc600;
-      --spacing: 10px;
-      --blur: 10px;
-    }
 
-    img {
-      padding: var(--spacing);
-      background: var(--base);
-      filter: blur(var(--blur));
-    }
+  :root {
+    --base: #ffc600;
+    --spacing: 10px;
+    --blur: 10px;
+  }
 
-    .hl {
-      color: var(--base);
-    }
+  img {
+    padding: var(--spacing);
+    background: var(--base);
+    filter: blur(var(--blur));
+  }
 
-    /*
-      misc styles, nothing to do with CSS variables
-    */
+  .hl {
+    color: var(--base);
+  }
+
+  /*
+    misc styles, nothing to do with CSS variables.
+  */
 
     body {
       text-align: center;
@@ -70,10 +71,10 @@
       document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
     }
 
-    inputs.forEach(input => input.addEventListener('change', handleUpdate));
-    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
-  </script>
+    inputs.forEach( input => input.addEventListener('change', handleUpdate));
+    inputs.forEach( input => input.addEventListener('mousemove', handleUpdate));
 
+  </script>
 
 </body>
 </html>
